--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,7 +9,11 @@
     "build": "rimraf dist && tsc",
     "start": "node dist/index.js",
     "lint": "eslint .",
-    "test": "jest"
+    "test": "jest",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:studio": "prisma studio",
+    "seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
