--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -3,16 +3,17 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start",
+    "start": "npx expo start",
     "test": "jest",
     "build": "npx tsc --noEmit",
+    "build:mobile": "npx expo export",
     "build:android": "npx eas build --platform android --profile production --non-interactive",
     "build:ios": "npx eas build --platform ios --profile production --non-interactive",
     "build:preview:android": "npx eas build --platform android --profile preview --non-interactive",
     "build:preview:ios": "npx eas build --platform ios --profile preview --non-interactive",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "npx expo start --android",
+    "ios": "npx expo start --ios",
+    "web": "npx expo start --web"
   },
   "dependencies": {
     "expo": "~53.0.22",
@@ -20,10 +21,10 @@
     "expo-status-bar": "~2.2.3",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
-    "react-native": "^0.79.5",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native": "0.79.5",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "^15.12.1",
+    "react-native-svg": "15.11.2",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
