fix(mobile): stable Expo Router setup (no custom Babel), JSC engine, scoped Metro; remove Tailwind classNames and legacy entry

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -19,9 +19,11 @@
       "typedRoutes": true
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "jsEngine": "jsc"
     },
     "android": {
+      "jsEngine": "jsc",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
