chore: add dev:web+api script using npm-run-all (parallel)

--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
   "name": "midasmaker",
   "private": true,
-  "workspaces": ["apps/*"],
+  "workspaces": [
+    "apps/*"
+  ],
+  "overrides": {
+    "react-native-svg": "15.11.2"
+  },
   "scripts": {
     "dev:web": "npm --prefix apps/web run dev",
+    "dev:web+api": "npm-run-all -p dev:web dev:api",
     "dev:api": "npm --prefix apps/api run dev",
     "dev:mobile": "npm --prefix apps/mobile run start",
     "build:web": "npm --prefix apps/web run build",
     "build:api": "npm --prefix apps/api run build",
     "build:mobile": "npm --prefix apps/mobile run build",
+    "build:ios": "expo export --platform ios",
     "build": "npm run build:api && npm run build:web && npm run build:mobile",
     "test": "npm -ws run test",
     "lint": "npm -ws run lint"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
-
