--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -4,7 +4,7 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "npx expo start",
-    "test": "jest",
+    "test": "jest-expo",
     "build": "npx tsc --noEmit",
     "build:mobile": "npx expo export",
     "build:android": "npx eas build --platform android --profile production --non-interactive",
@@ -24,11 +24,13 @@
     "react-native": "0.79.6",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "tailwindcss": "^3.4.17",
-    "react-native-svg": "15.11.2"
+    "react-native-svg": "15.11.2",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.0.10",
     "jest-expo": "~53.0.10",
