--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lint": "npm -ws run lint"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "ts-node": "^10.9.2"
   }
 }
