--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "google-auth-library": "^10.3.0",
+    "googleapis": "^159.0.0",
     "jsonwebtoken": "^9.0.2",
     "zod": "^4.1.5"
   },
