--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,9 +50,6 @@ jobs:
   web:
     name: Web (build)
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: apps/web
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -60,17 +57,18 @@ jobs:
           node-version: 20
           cache: npm
           cache-dependency-path: apps/web/package-lock.json
-      - run: npm ci
-      - run: npm run build
+      - name: Install web dependencies
+        run: npm ci
+        working-directory: apps/web
+      - name: Build web app
+        run: npm run build
+        working-directory: apps/web
         env:
           NEXT_PUBLIC_API_BASE_URL: http://localhost:3001
 
   mobile:
     name: Mobile (type-check)
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: apps/mobile
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -78,6 +76,10 @@ jobs:
           node-version: 20
           cache: npm
           cache-dependency-path: apps/mobile/package-lock.json
-      - run: npm ci
-      - run: npx tsc --noEmit
+      - name: Install mobile dependencies
+        run: npm ci
+        working-directory: apps/mobile
+      - name: Type check mobile app
+        run: npx tsc --noEmit
+        working-directory: apps/mobile
 
